# mcp-codedoc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  code_doc.py  pyproject.toml  server.py
customServer/: README.md  code_doc.py  notes.py  pyproject.toml
customServer/documentation/: audit_chat_snippet_20251225_010419.md  doc_20251218_012724.md  doc_20251218_013439.md  doc_20251225_001734.md  documentation_2025-11-13_14-18.md  documentation_2025-11-13_18-39.md  documentation_2025-11-13_18-48.md
customServer/documentation_notes/: notes_2025-11-13_18-39.txt  notes_2025-11-13_18-48.txt
documentation/: doc_20251218_013928.md  doc_20251224_235202.md
src/codedoc/: server.py
src/codedoc/documentation/: documentation_snippet_20251227_003849.md
