[project]
name = "mcp-codedoc"
version = "0.1.0"
description = "Professional AI-driven code documentation and quality audit agent."
readme = "README.md"
authors = [{ name = "Akshay", email = "your@email.com" }]
requires-python = ">=3.10"
dependencies = [
    "mcp[server]",
    "fastmcp",
]

[project.scripts]
codedoc = "codedoc.server:mcp.run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]