[project]
name = "mcp-codedoc"
version = "0.1.3"
description = "Professional AI-driven code documentation and quality audit agent."
readme = "README.md"
authors = [{ name = "Akshay", email = "ak715173@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "fastmcp",
]

[project.scripts]
codedoc = "codedoc.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]